    -0.5.3  - redvypr.rem_device() added and cleaned redvyprWidget.closeTab()
            - distribute_data has now connection to main thread via redvypr.redvyprqueue to check for updates done by main thread
            - maximum device threshold added: config_template['redvypr_device']['max_devices']  = 1
    -0.5.2  - subscriptions as a config key for devices added
            - improved configuration parsing
            - iored with a rep/req information exchange instead of multicast. Multicast optional for broadcasting presence.
    -0.5.1  - added tag in _redvypr data packet to prevent an infinite recirculation
            - plot much more usable
            - many improvements in iored
    -0.5.0  - redesigned distribute_data to check for subscriptions instead of dynamically connecting queues
            - rewrote devices such that they work with the new design
    -0.4.999
            - removed config folder
            - created example folder with configuration, needs to be cleaned
            - config module to harmonize configuration
            - added Internet of Redvype (iored) device
            - introduction of configuration class for device configuration
            - "s" for autostart and "p" or process in the -a option. Standard case is starting a device as a thread.
    -0.4.10:- rawdatalogger improved
            -
    -0.4.9: - autostart option in yaml config moved to deviceconfig
    -0.4.8: - autostart option in the devices widget to have the device started automatically with a saved configuration
            - loglevel/name moved from 'config' to a deviceconfig dictionary entry
    -0.4.7: - nogui works again
            - template configuration is merged with user configuration in add_device
            - network_device updated with new API
    -0.4.6: - configuration now with template dictionaries possible, device can consits only of template and start function, redvypr will use standard device and gui objects